--- a/web_app/pubspec.yaml
+++ b/web_app/pubspec.yaml
@@ -2,10 +2,10 @@ name: web_app
 description: The AngularDart version of https://github.com/Shinpeim/NekogataDrumSequencer
 version: 0.0.1
 environment:
-  sdk: '>=1.22.0 <2.0.0'
+  sdk: '>=1.23.0 <2.0.0'
 dependencies:
-  angular2: ^2.2.0
-  angular2_components: ^0.2.2
+  angular2: ^3.0.0
+  angular_components: ^0.5.0
   model:
     path: ../model
 dev_dependencies:
