--- a/model/pubspec.yaml
+++ b/model/pubspec.yaml
@@ -1,12 +1,12 @@
 name: model
 description: The model.
-version: 0.0.1
+version: 0.0.2
 
 environment:
-  sdk: '>=1.23.0 <2.0.0'
+  sdk: '>=1.24.0 <2.0.0'
 
 dependencies:
-  angular2: ^3.0.0
+  angular: ^4.0.0
 
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
@@ -14,7 +14,7 @@ dev_dependencies:
   quiver: any
 
 transformers:
-- angular2
+- angular
 
 - test/pub_serve:
     $include: test/**_test{.*,}.dart
